kubernetes/gitops/base/infrastructure/networkpolicies/allow-egress-to-magento.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-magento
  namespace: infrastructure
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
          podSelector:
            matchLabels:
              app.kubernetes.io/name: magento
      ports:
        - protocol: TCP
          port: 8080
