kubernetes/gitops/base/infrastructure/networkpolicies/allow-ingress-from-magento-opensearch.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-magento-opensearch
  namespace: infrastructure
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opensearch
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
          podSelector:
            matchLabels:
              app.kubernetes.io/name: magento
      ports:
        - protocol: TCP
          port: 9200
